--- a/style.css
+++ b/style.css
@@ -7,9 +7,12 @@
 .upperbar {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 500px;
     margin-left: 48px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
     font-size: 32px;
     line-height: 44px;
 }
@@ -20,6 +23,9 @@
     justify-content: space-evenly;
     width: 556px;
     margin-left: 48px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
     font-size: 32px;
     line-height: 44px;
 }
@@ -64,7 +70,7 @@
 .icon {
     margin-left: 900px;
     margin-top: -110px;
-    width: 350px;
+    width: 400px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -77,6 +83,5 @@
     font-size: 40px;
     line-height: 54px;
     letter-spacing: -0.004em;
-    margin-bottom: 100px;
-    margin-left: 33px;
+    margin-bottom: 80px;
 }
